US888096: Support java 8 (#7)